@@ -72,7 +72,7 @@ For sh-based shells:
 
 {{{#!blockquote
 {{{
-LD_PRELOAD=/usr/local/firstworks/lib/libmysql51sqlrelay.so
+LD_PRELOAD=/usr/local/firstworks/lib/libmysql51sqlrelay.so.4
 export LD_PRELOAD
 mysql -h localhost -P 9000 --user=oracleuser --password=oraclepass
 }}}
@@ -82,7 +82,7 @@ For csh-based shells:
 
 {{{#!blockquote
 {{{
-setenv LD_PRELOAD /usr/local/firstworks/lib/libmysql51sqlrelay.so
+setenv LD_PRELOAD /usr/local/firstworks/lib/libmysql51sqlrelay.so.4
 mysql -h localhost -P 9000 --user=oracleuser --password=oraclepass
 }}}
 }}}
@@ -148,7 +148,7 @@ If your system uses systemd instead of init scripts, then you can modify the sys
 {{{#!blockquote
 .include /lib/systemd/system/httpd.service
 [Service]
-Environment=LD_PRELOAD=/usr/local/firstworks/lib/libmysql51sqlrelay.so
+Environment=LD_PRELOAD=/usr/local/firstworks/lib/libmysql51sqlrelay.so.4
 }}}
 
 Unfortunately this approach does not work with PHP.  See the section below
@@ -202,7 +202,7 @@ follows:
 {{{#!blockquote
 {{{
 #!/bin/sh
-LD_PRELOAD=/usr/local/firstworks/lib/libmysql51sqlrelay.so
+LD_PRELOAD=/usr/local/firstworks/lib/libmysql51sqlrelay.so.4
 export LD_PRELOAD
 /usr/local/bin/pop3d $@
 }}}
